# rtos_base

./: .gitignore  CMakeLists.txt  README.md  config.env  idf_component.yml  kconfigs.in  kconfigs_projbuild.in  partitions.csv  sdkconfig.defaults
arduino/UART_adapted/: UART_adapted.ino
arduino/arduino_UART/: arduino_UART.ino  lit.txt
arduino/arduino_vl53l0x/: arduino_vl53l0x.ino
components/espp__socket/: idf_component.yml
components/espp__socket/src/: udp_socket.cpp
components/vl53l0x/: CMakeLists.txt
components/vl53l0x/include/: vl53l0x_platform.h
components/vl53l0x/src/: vl53l0x_api.c  vl53l0x_i2c_platform.c  vl53l0x_i2c_win_serial_comms.c  vl53l0x_platform.c
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
main/: CMakeLists.txt  camera_config.c  camera_httpd.c  camera_task.c  camera_task.h  camera_udp_task.c  i2c_init.c  idf_component.yml  main.c  mjpeg_stream_task.c  mqtt_uart_bridge.c  rtsp_server.cpp  rtsp_wrapper.c  tcp_camera_stream_task.c  tcp_server.c  tcp_server.h  tcp_server_task.c  uart_comm.c  uart_comm.h  uart_task.c  vl53l0x_task.c  websocket_server.c
main/include/: camera_config.h  camera_httpd.h  camera_task.h  i2c_init.h  mjpeg_stream_task.h  mqtt_uart_bridge.h  rtsp.hpp  rtsp_wrapper.h  tcp_camera_stream_task.h  tcp_server_task.h  uart_comm.h  uart_task.h  vl53l0x_task.h  websocket_server.h
pc/: cam_recv.py  optimized_mqtt.py  rtsp_opencv_cli.py  tcp_recv.py
pc/app/: config.py  main.py
pc/app/services/: behaviour_service.py  control_logic.py  image_capture_service.py  joystick_service.py  lane_service.py  mqtt_service.py  pid_service.py  rtp_mjpeg_client.py  yolo_service.py
pc/app/ui/: main_window.py  widgets.py
pc/recordings/: rtsp_stream_20250818_131944.avi  rtsp_stream_20250818_131944.mjpeg
pc/test/: joystick_mapper.py  mqtt_client.py  received_frame.raw  rtsp_client.py  rtsp_saver.py  tcp_client.py  tcp_stream_test.py  websocket_client.py
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml  results.csv
runs/detect/train_more_arrows/: args.yaml
runs/detect/train_more_arrows2/: args.yaml  results.csv
